# fastant-cpp

./: .gitignore  CMakeLists.txt  README.md  longterm.txt
bench/: CMakeLists.txt  bench_instant.cpp
cmake/: fastantConfig.cmake.in
examples/: CMakeLists.txt  anchor.cpp  basic.cpp  longterm.cpp
include/fastant/: fastant.hpp
include/fastant/detail/: tsc_common.hpp  tsc_now.hpp  tsc_online.hpp  tsc_static.hpp
scripts/: plot_longterm_drift.py
tests/: CMakeLists.txt  test_instant.cpp
